# piroverd

./: CMakeLists.txt  README  ak8975.c  ak8975.cpp  ak8975.h  i2c.c  i2c.h  i2cdevice.cpp  i2cdevice.h  main.c  main.cpp  mathfunc.h  max17043.c  max17043.cpp  max17043.h  mpu6050.c  mpu6050.cpp  mpu6050.h  net.c  net.h  outputs.cpp  outputs.h  pca9685.c  pca9685.cpp  pca9685.h  sensors.c  sensors.cpp  sensors.h  sn3218.c  sn3218.cpp  sn3218.h
